Update .gitignore for ignoring ipynb checkpoints file, Add completed worksheet_01

--- a/worksheets/worksheet_01_showndarya_madhavan.ipynb
+++ b/worksheets/worksheet_01_showndarya_madhavan.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
+    "Name: SHOWNDARYA MADHAVAN\n",
     "UID: \n",
     "\n",
     "### Topics\n",
@@ -171,7 +171,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a distributed version control system that helps you manage and keep track of source code history. \n",
+    "GitHub is a cloud based hosting service, also SaaS (Software-as-a-Service), that lets you and your team host and manage git repositories remotely."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,7 +186,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`git clone <repo-url>`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,7 +200,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You can use the `Fork` button in GitHub to create a copy. \n",
+    "Alternatively, you can perform a mirror clone `git clone --mirror <repo-url>` to have an identical, interchangable copy with original repository."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +215,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If the copy is remote, then we update the forked repository by using the `Sync fork` button on GitHub to get changes from the original. \n",
+    "If the copy is local, we can update the local clone through command line with `git fetch upstream`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +230,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. `git status` to check all the unstaged(tracked or untracked) files.\n",
+    "2. `git add <filename>` or `git add .` (for all files which are unstaged). This will get the changes staged.\n",
+    "3. `git commit -m <commit-message>` to create a commit with the staged changes in the local branch.\n",
+    "4. `git pull` to update the branch before pushing and resolve merge conflicts, if any.\n",
+    "5. `git push origin <branch-name>` to push the changes to the remote branch in GitHub."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,7 +248,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Although `git pull` is the faster way, doing a `git fetch` and then `git merge` is the safer way, to avoid accidental code overwrites/deletions due to automatic merges in the case of `git pull`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,7 +262,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Conflicts arise when multiple people collaborate on the same file or lines of code, which is common when a team works on a feature. In this case, when there are commits on the remote branch on the same files the local branch has updates in, there are merge conflicts when we try to merge the local and remote branches which usually arise while doing a `git pull` or after `git fetch`.  \n",
+    "\n",
+    "Some merge conflicts are resolved automatically by git. Some need manual intervention by the owner of the code changes or a collaborator."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +278,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Let us refer original repository are `R`\n",
+    "1. Fork `R`. Let us refer to forked repository as `R'`.\n",
+    "2. Clone `R'` to work on it locally.\n",
+    "3. Add upstream to `R` to keep your fork updated: `git remote add upstream <url-of-R>`.\n",
+    "4. Before making local changes, update your `R'` from `R` to get the latest changes: `git pull upstream main`.\n",
+    "5. Make the changes.\n",
+    "6. Add the changes to staged.\n",
+    "7. Commit the changes with a message.\n",
+    "8. Push the commit to remote `R'`.\n",
+    "9. Go to `Pull requests` tab in the `R'` GitHub repository page, and click on `New pull request` button to raise a PR from `R'` to `R`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,7 +301,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. `git status`: to know the changes made, tracked (modified) and untracked files\n",
+    "2. `git add <filename>`: to add files to stage i.e to add changes to a commit\n",
+    "3. `git commit -m <commit-message>`: to commit the changes to the branch\n",
+    "4. `git log`: to check the history of commits in the branch"
+   ]
   }
  ],
  "metadata": {
