--- a/worksheets/worksheet_00.ipynb
+++ b/worksheets/worksheet_00.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Brian Mahabir\n",
+    "UID: U08039190\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +22,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Masters student interested and working in Data Analytics"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +36,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Learn more common techniques to analyze data optimally "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +50,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ive compute loss ratio's for solar panel preformance from data in csv file format"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +64,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "statsitics is probably the least familar. Id probably need a refresher on calculus its also been awhile"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,8 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -86,7 +94,7 @@
        "64"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,10 +195,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x, y, z: True if x < y < z else False)(1,2,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda n : (lambda x: x*n)(3))(6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +292,7 @@
        "[6, 6, 6, 6, 6]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,12 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, True, True]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
+    "gt_zero = map(lambda x: True if x > 0 else False, c)\n",
     "list(gt_zero)"
    ]
   },
@@ -298,12 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False, False]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
+    "mul_of3 = map(lambda x: True if x % 3 == 0 else False, d)\n",
     "list(mul_of3)"
    ]
   },
@@ -320,12 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
+    "evens = filter(lambda x: True if x % 2 == 0 else False, e)\n",
     "list(evens)"
    ]
   },
@@ -342,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -355,14 +422,12 @@
    ],
    "source": [
     "from functools import reduce\n",
-    "\n",
     "nums = [1, 2, 3, 4, 5]\n",
     "sum_nums = reduce(lambda acc, x : acc + x, nums, 0)\n",
     "print(sum_nums)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,16 +448,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "factorial = lambda x : reduce()\n",
-    "factorial(10)"
+    "from functools import reduce\n",
+    "factorial = lambda x : reduce(lambda y, z: y*z, range(1, x+1))\n",
+    "factorial(4)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -401,16 +477,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "sieve = lambda x : reduce(lambda acc, y: list(filter(lambda z: True if ((z == y) or (z % y != 0)) else False, acc)), range(2, x+1), range(2, x+1))\n",
     "print(sieve(100))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -423,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -452,11 +535,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "forgot the parenthesis after calling is_overdrawn. Instead returning an object "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -479,11 +564,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "the for loop iterates the sequence range(4). modifiying i after the print statement will do nothing as i is then redefined as the next stem in the range"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +666,7 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -593,10 +680,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.7"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
