--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -1,14 +1,15 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Brian Mahabir\n",
+    "UID: U08039190\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -18,12 +19,12 @@
     "\n",
     "#### This is your checklist:\n",
     "\n",
-    "- [x] Access to terminal\n",
-    "- [x] Install Git\n",
-    "- [x] Sign up for a GitHub account\n",
-    "- [x] Choose editor\n",
-    "- [x] Set up ssh keys\n",
-    "- [x] Configure git\n",
+    "- [x] Access to terminal X\n",
+    "- [x] Install Git X\n",
+    "- [x] Sign up for a GitHub account X\n",
+    "- [x] Choose editor X\n",
+    "- [x] Set up ssh keys X\n",
+    "- [x] Configure git X\n",
     "\n",
     "### Step 1: Work Environment:  Access to Terminal \n",
     "\n",
@@ -172,7 +173,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git is version control github is the cloud hosting system"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +187,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone url"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +201,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone button or save the zip file"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +215,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No you need to update it"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,7 +229,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git add\n",
+    "git commit \n",
+    "git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,7 +245,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git pull upstream"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,7 +259,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "conflicts with changes in code either do a force pull or a pull request or use different branches"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +273,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "fork repo\n",
+    "clone forked repo\n",
+    "create new branch\n",
+    "add to local repo in the created branch\n",
+    "push branch\n",
+    "ask for pull request in browser "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,20 +292,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git status: to know the changes made, tracked (modified) and untracked files\n",
+    "git add <filename>: to add files to stage i.e to add changes to a commit\n",
+    "git commit -m <commit-message>: to commit the changes to the branch\n",
+    "git log: to check the history of commits in the branch"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
@@ -289,5 +325,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
