--- a/worksheets/worksheet_00.ipynb
+++ b/worksheets/worksheet_00.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "- Name: Haoran Chen\n",
+    "- UID: U84518176\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -21,9 +21,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To learn some techniques to incorporate programming and the analysis of data. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,9 +36,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Academic: To get at least A- for this course.\n",
+    "- Professional: Be able to apply what I learn in this semester to solve real-world problem."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,9 +52,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,9 +67,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Math, especially linear algebra:)"
+   ]
   },
   {
    "attachments": {},
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +203,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(lambda x, y, z: x < y < z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,7 +219,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lambda n: (lambda x: x * n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +302,7 @@
    "outputs": [],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
+    "gt_zero = map(lambda x: x > 0, c)\n",
     "list(gt_zero)"
    ]
   },
@@ -298,12 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False, False]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
+    "mul_of3 = map(lambda x: x % 3 == 0, d)\n",
     "list(mul_of3)"
    ]
   },
@@ -320,12 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
+    "evens = filter(lambda x: x % 2 == 0, e)\n",
     "list(evens)"
    ]
   },
@@ -342,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +426,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "factorial = lambda x : reduce()\n",
+    "from functools import reduce\n",
+    "\n",
+    "factorial = lambda x : reduce(lambda y, z : y * z, range(1, x+1), 1)\n",
     "factorial(10)"
    ]
   },
@@ -405,7 +446,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "from functools import reduce\n",
+    "sieve = lambda n : reduce(lambda primes, num : sum(filter(lambda x: num % x == 0, range(2, n+1))) == num and primes + [num] or primes, range(2, n+1), [])\n",
+    "print(sieve(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "sieve = lambda n : reduce(lambda primes, num : filter(lambda x: x != num and num % x == 0, range(2, n+1)) == [] and primes + [num] or primes, range(2, n+1), [])\n",
     "print(sieve(100))"
    ]
   },
@@ -423,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -450,13 +511,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "'myBank.is_overdrawn' is considered as the reference to the 'is_overdrawn()' instead of the result returned by the method. So 'myBank.is_overdrawn' is always true then \"OVERDRAWN\" is printed."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -477,13 +541,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The for loop will itrate 4 times, the variable 'i' will be assigned to the current value of the loop counter (from 0 to 3). After print it out, the variable 'i' will be assigned to 10, but in the next loop, it will be reassigned by the loop counter, so 'i = 10' will not affect the result."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -504,13 +571,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because in the second line, it creats a list called 'board' containing 3 refrences to the same list called 'row'. So in the third line, by changing the first element of the first 'row', all three rows will be affected because they have the same reference."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -537,13 +607,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In the 'funcs_results = [func() for func in funcs]' line, it calls all the functions containing in the list 'funcs' and store the returned values to 'funcs_results'. Because it calls 'some_func()' outside the for loop, it will return the final value of 'x', which is 2. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -569,17 +642,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When it open the same file again using \"w+\" mode, the original content of the file will be erased. So the 'lines' will be empty therefore 'nums' is empty."
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -593,9 +666,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b301cde804752a95cb20f89102c03dd0619f7abaebebce7a7bde78ba4ed591c7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
