--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "- Name: Haoran Chen\n",
+    "- UID: U84518176\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -170,9 +170,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a version control system that helps developers to track and manage changes to their code.\n",
+    "GitHub is a web-based platform that uses Git for version control and provides a place for developers to host and share their code with others."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,9 +186,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`git clone <repo-url>`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,9 +201,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`Fork` button."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,9 +216,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,9 +231,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- `git add <new files>`\n",
+    "- `git commit -m \"commit-message\"`\n",
+    "- `git push origin <branch-name>`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,9 +248,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`git pull` or `git fetch` and `git merge`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,9 +263,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If there are updates to the remote repo and some other updates to the local one, it will cause a conflict. Need to push the local updates to a new branch and rebase it to the main branch."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +278,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- `Fork` class repo.\n",
+    "- `Clone` class repo to work on it locally.\n",
+    "- Add an upstream to class repo: `git remote add upstream <url-of-class-repo>`.\n",
+    "- Make the changes.\n",
+    "- Add the changes.\n",
+    "- Commit the changes with a message.\n",
+    "- Push the commit to remote class repo.\n",
+    "- Go to `Pull requests` tab in the class repo, and click on `New pull request` button to raise a PR from `R'` to `R`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,9 +300,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- `git status`: to know the status of this repo, tracked (modified) and untracked files.\n",
+    "- `git log`: to check the history of commits in the branch."
+   ]
   }
  ],
  "metadata": {
@@ -279,12 +317,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "b301cde804752a95cb20f89102c03dd0619f7abaebebce7a7bde78ba4ed591c7"
    }
   }
  },
