--- a/worksheets/worksheet_01_yujie.ipynb
+++ b/worksheets/worksheet_01_yujie.ipynb
@@ -1,18 +1,12 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Yujie Yan\n",
+    "UID: U13600938\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -162,7 +156,13 @@
     "#### Default Editor\n",
     "\n",
     "The default editor will be [Vim](https://vim.rtorr.com/). You may want to look up how to edit, save, and close vim as this can't be done with just point and click (you must use the vim commands)."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -184,7 +184,9 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "Git is a software to do the version control. GitHub is a platform based on Git to store the code and share the code."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,7 +206,9 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "git clone"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,12 +223,15 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "The fork button can copy the repo to my GitHub."
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": []
+   }
   },
   {
    "cell_type": "markdown",
@@ -244,7 +251,9 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "No, I need to do git fetch and git merge."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +273,11 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "git add.\n",
+    "git commit -m \"some msg\"\n",
+    "git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,7 +297,9 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "git pull"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,7 +319,9 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "because someone modified my code and push it to the repo. And i pull it from repo, it will conflict. I need to merge it locally. Or I can do git stash"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +341,12 @@
      "name": "#%% md\n"
     }
    },
-   "source": []
+   "source": [
+    "fork the repo\n",
+    "clone it locally\n",
+    "push the changes\n",
+    "send pull request"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,7 +356,15 @@
     }
    },
    "source": [
-    "i) Write here some other commands we used in class and what they mean / how to use them:"
+    "i) Write here some other commands we used in class and what they mean / how to use them:\n",
+    "\n",
+    "git checkout: it can switch to another branch\n",
+    "git branch: it can create a new branch\n",
+    "git status: it can show the status in the repo\n",
+    "git log: it can show the commit log\n",
+    "git pull: it can fetch the remote data and merge\n",
+    "git add: it can add the modified or created files\n",
+    "git commit: it can commit the changes."
    ]
   },
   {
