fork and reupload worksheets

--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -170,9 +170,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git allows users to do version control locally, github allows users to do version control online, and store their previous projects as repositories."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,9 +185,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone (URL)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,9 +200,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would use the green \"Code\" button, then either copy the URL and git clone locally."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,9 +215,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Not until I call git pull. Or if I made it completely local by making it no longer a git folder, then I will never see changes from repo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,9 +230,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git add, git commit, git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,9 +245,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git pull or git merge the newest branch"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,9 +260,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on my experience, it's usually due to people editting the same files with/without prior pull/merge. My first choice is to prevent this from happening by communicating with them. If conflict already happened, current strong IDEs can help us greatly with resolving them."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +275,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Update my own branch to the newest.\n",
+    "2. Switch to \"main\", git pull.\n",
+    "3. git merge on my own branch.\n",
+    "4. Switch back to my own branch, git pull.\n",
+    "5. git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,9 +294,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git status: check the current status of current working directory, whether it has uncommitted files etc."
+   ]
   }
  ],
  "metadata": {
@@ -279,12 +310,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "2df53de82fe139b23b9a340061c8527273b7fa86551030a1983ff618b17018eb"
    }
   }
  },
