--- a/worksheets/worksheet_00.ipynb
+++ b/worksheets/worksheet_00.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Zheyu Yang\n",
+    "\n",
+    "UID: U41174832\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -21,9 +22,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I am more of a application type guy who likes to make things work, I believe this course's high concentration of applied areas could hone my skills."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,9 +37,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I will be aiming for A this semester."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,9 +52,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Kind of, I have taken multiple courses about AI, Computer Vision, and ML, although those can relate to Data Science, they can also be separated."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,9 +67,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Compare to programming, my math and statistic skills will be not as strong, but they are all ok."
+   ]
   },
   {
    "attachments": {},
@@ -187,10 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x, y, z : x < y and y < z)(1,2,3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda n : (lambda a : a * n))(2)(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +319,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, True, True]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
+    "gt_zero = map(lambda x : x > 0, c)\n",
     "list(gt_zero)"
    ]
   },
@@ -298,12 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False, False]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
+    "mul_of3 = map(lambda x : x % 3 == 0, d)\n",
     "list(mul_of3)"
    ]
   },
@@ -320,12 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
+    "evens = filter(lambda x : x % 2 == 0, e)\n",
     "list(evens)"
    ]
   },
@@ -342,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -383,11 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "factorial = lambda x : reduce()\n",
+    "factorial = lambda x : reduce(lambda x1, x2: x1 * x2, range(1, x + 1))\n",
     "factorial(10)"
    ]
   },
@@ -401,11 +484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "from functools import reduce\n",
+    "sieve = lambda x : reduce(lambda l,y : not 0 in map(lambda z : y % z, l) and l + [y] or l, filter(lambda w : w, range(2,x)), [])\n",
     "print(sieve(100))"
    ]
   },
@@ -450,13 +542,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The myBank.is_overdrawn does not really call the function, instead, this if clause is evaluated true as the function actually exists."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -477,9 +572,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Python for loop does not follow other languages' (C for example) loop structure where the iterated value can be changed during iteration."
+   ]
   },
   {
    "cell_type": "code",
@@ -504,9 +602,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "board[0] still references the row variable, so change board[0][0] to \"X\" is like changing all row(s) [0] to \"X\"."
+   ]
   },
   {
    "cell_type": "code",
@@ -537,13 +638,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The for loop has ended, thus x is 2 already, then func() will all result to 2."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -569,17 +673,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "opened the file as write only mode, it cannot read under this mode."
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -593,9 +697,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "2df53de82fe139b23b9a340061c8527273b7fa86551030a1983ff618b17018eb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
