--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang\n",
+    "UID: U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -170,9 +170,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is on laptop which is the version control system\n",
+    "Github is online which is a website that host and backup the files"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,9 +186,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone with the https url"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,9 +201,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "fork in the github"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,9 +216,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No unless you git pull it"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,9 +231,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git add\n",
+    "git commit\n",
+    "git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,9 +248,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git pull\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,9 +263,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Both copied repos or branches make some changes before update to another one.\n",
+    "Compare and Merge"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +279,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "first, fork the class repository and git clone to the local. Then, make some notes and git commit & push. Finally, make the pull request and wait for the approval."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,9 +294,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git fetch: downloads commits, files, and refs from a remote repository into a local repo\n",
+    "git rebase: integrate changes from one branch onto another\n",
+    "merge: compare and merge files in different brances"
+   ]
   }
  ],
  "metadata": {
@@ -279,12 +312,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "version": "3.9.7 (v3.9.7:1016ef3790, Aug 30 2021, 16:39:15) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
