--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang\n",
+    "UID: U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -36,9 +36,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(-4,-2,0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,9 +51,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "B"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,9 +70,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Positive\n",
+    "Negative\n",
+    "Negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,9 +87,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "attachments": {},
@@ -89,9 +103,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- What and who the model is used / intended for"
+   ]
   },
   {
    "attachments": {},
@@ -154,12 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.7 (v3.9.7:1016ef3790, Aug 30 2021, 16:39:15) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
