--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -64,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: import pandas and matplotlib in this cell"
+    "#TODO: import pandas and matplotlib in this cell\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -81,11 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: read the cookies.csv file into a pandas dataframe"
+    "#TODO: read the cookies.csv file into a pandas dataframe\n",
+    "df  = pd.read_csv(\"cookies.csv\")"
    ]
   },
   {
@@ -106,11 +108,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cookie</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>calories</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>cost_to_make</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>laddoo lemon</td>\n",
+       "      <td>[\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]</td>\n",
+       "      <td>170</td>\n",
+       "      <td>3.102</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nevadito</td>\n",
+       "      <td>[\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...</td>\n",
+       "      <td>224</td>\n",
+       "      <td>4.069</td>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>red velvet rauw</td>\n",
+       "      <td>[\"flour\",\"cocoa powder\",\"butter\",\"red food col...</td>\n",
+       "      <td>198</td>\n",
+       "      <td>3.780</td>\n",
+       "      <td>1.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bad berry bunny</td>\n",
+       "      <td>[\"flour\",\"blueberries\",\"sugar\",\"butter\"]</td>\n",
+       "      <td>191</td>\n",
+       "      <td>4.148</td>\n",
+       "      <td>1.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>orange ozuna</td>\n",
+       "      <td>[\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]</td>\n",
+       "      <td>162</td>\n",
+       "      <td>3.241</td>\n",
+       "      <td>1.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            cookie                                        ingredients  \\\n",
+       "0     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+       "1         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
+       "2  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
+       "3  bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
+       "4     orange ozuna   [\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]   \n",
+       "\n",
+       "   calories  radius  cost_to_make  \n",
+       "0       170   3.102          0.67  \n",
+       "1       224   4.069          1.04  \n",
+       "2       198   3.780          1.07  \n",
+       "3       191   4.148          1.39  \n",
+       "4       162   3.241          1.15  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: print the head of the dataframe"
+    "#TODO: print the head of the dataframe\n",
+    "df.head()"
    ]
   },
   {
@@ -598,18 +695,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "e15bc6607870fdc379959e22d79640aa99fa71b66a3c2ab1dc475f8003ba1625"
    }
   }
  },
